modules/argocd/config/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: cicd
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  annotations:
    kubernetes.io/ingress.className: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.local
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: argocd-server
              port:
                number: 80
